# ps-markov

./: .gitignore  index.html  ps-markov.py  style.css
data/: alex-diversity.txt  alex.txt  calvin-diversity.txt  calvin.txt  jonathan.txt  mark.txt  olivia.txt  shiyue.txt  tim-nsf.txt  tim.txt
good/: mtwhitney.txt  quantumPL.txt
ps-rs/: Cargo.toml  Rocket.toml
ps-rs/src/: main.rs
ps-rs/src/parser/: mod.rs  tokenizer.rs
ps-rs/src/syn_tree/: mod.rs  parser.rs
templates/: statement.html
