[package]
name = "ps-rs"
version = "0.1.0"
authors = ["Alex Ozdemir <aozdemir@hmc.edu>"]

[dependencies]
rand = "0.3"
lazy_static = "0.2"
rocket = "0.1.2"
rocket_codegen = "0.1.2"
serde = "*"
serde_derive = "*"
serde_json = "*"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["handlebars_templates"]
