[package]
name = "ps-rs"
version = "0.1.0"
authors = ["Alex Ozdemir <aozdemir@hmc.edu>"]

[dependencies]
rand = "0.3"
rocket = "0"
rocket_codegen = "0"
serde = "0"
serde_derive = "0"
serde_json = "0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["handlebars_templates"]
